# OSVEngine

./: .gitignore  CMakeLists.txt  DevkitA64Libnx.cmake  README.md  array-to-vertex.py
cmake/: SwitchTools.cmake
include/OSV/audio/: Music.h
include/OSV/input/: KeyInputHandler.h  LookInput.h  Mouse.h  MouseInput.h
include/OSV/input/keyConfigs/: configStructs.h  keyBinds.h
include/OSV/rendering/: Camera.h  Light.h  Mesh.h  Model.h  RenderEngine.h  Shader.h  Textured.h  VertexShape.h  texture.h
include/OSV/rendering/light/: light.h
include/OSV/rendering/unit_models/: Cube.h
include/WIZ/asset/: Asset.h  AssetBase.h  SinglePathAsset.h
include/WIZ/input/: Mouse.h
include/WIZ/rendering/: Camera.h  RenderEngine.h  Shader.h  Textured.h  VertexShape.h  shader.h
programs/: assignment1.cpp  assignment2.cpp  quiz1.cpp  quiz2.cpp
res/models/arm/: arm.blend  arm.blend1  arm.dae
res/models/backdrop/: backdrop.blend  backdrop.blend1  backdrop.dae
res/models/coor_axis/: coor_axis.blend  coor_axis.blend1  coor_axis.dae
res/models/fork/: fork.blend
res/models/ground/: ground.blend  ground.blend1  ground.dae
res/models/letters/e/: e.blend  e.blend1  e.dae
res/models/letters/l/: l.blend  l.blend1  l.dae
res/models/letters/s/: s.blend  s.blend1  s.dae
res/models/letters/w/: w.blend  w.blend1  w.dae
res/models/skybox/: skybox.blend  skybox.blend1  skybox.dae
res/models/tenis_net/: tenis_net.blend  tenis_net.blend1  tenis_net.dae
res/models/tenis_racket/: tenis_racket.blend  tenis_racket.blend1  tenis_racket.dae
res/models/tennis_ball/: tennis_ball.blend  tennis_ball.blend1  tennis_ball.dae
res/shaders/: defaultFragment.fs  defaultVertex.fs  defaultVertex.vs
res/shaders/light/: defaultLightFragment.fs  defaultLightVertex.fs
src/OSV/: assignment1.cpp  main.cpp
src/OSV/audio/: Music.cpp
src/OSV/input/: KeyInputHandler.cpp  MouseInput.cpp
src/OSV/rendering/: Camera.cpp  Mesh.cpp  Model.cpp  RenderEngine.cpp  Shader.cpp  Textured.cpp  VertexShape.cpp  light.cpp
src/OSV/rendering/unit_models/: Cube.cpp
src/WIZ/rendering/: Camera.cpp  RenderEngine.cpp  Shader.cpp  Textured.cpp  VertexShape.cpp
